# zeek-yara-integration

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGILE_WORKFLOW.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPMENT_WORKFLOW.md  DOCUMENTATION_STANDARDS.md  MAINTENANCE_GUIDE.md  MIGRATION_STRATEGY.md  PERFORMANCE.md  PERFORMANCE_METRICS.md  PHASE2_COMPREHENSIVE_PLAN.md  PROJECT_MILESTONES.md  PROJECT_PLAN.md  PROJECT_STRUCTURE.md  README.md  SPRINT_PLANNING.md  TESTING.md  TESTING_WORKFLOW.md  __init__.py  aggressive_fstring_fix.py  ci-update-notes.md  demo_multithreaded_performance.py  final_ci_fix.py  fix_all_ci_issues.py  fix_all_ci_issues.sh  fix_all_remaining_ci.py  fix_python_syntax.py  help_system.py  install_platform.py  lint_check.py  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  (+12 more)
.github/: PULL_REQUEST_TEMPLATE.md
COMMUNITY/: DISCORD_SETUP_GUIDE.md  FEEDBACK_AND_SUPPORT.md  LAUNCH_PLAN.md  ONBOARDING_WORKFLOW.md  README.md  RECOGNITION_SYSTEM.md
CONFIGURATION/: auto_detection.py
EDUCATION/: README.md  __init__.py  requirements.txt  start_tutorial_server.py  tutorial_web_server.py
PLATFORM/: suricata_integration.py  yara_scanner.py
TOOLS/: __init__.py
alert_manager/: __init__.py
api/: api_server.py  suricata_api.py
config/: .coveragerc  .isort.cfg  __init__.py  config.py  default_config.json  distributed_config.json  education_config.json  mkdocs.yml  production_config.json  pytest.ini  suricata.yaml  test-requirements.txt
core/: __init__.py  database.py  scanner.py
docs/: README.md  (+4 more)
(+203 files in other folders)
