[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zeek-yara-integration"
description = "Educational network security platform integrating Zeek, YARA, and Suricata"
requires-python = ">=3.12.5"
dynamic = ["version"]

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | extracted_files
  | DATA/runtime
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip = ["venv", ".venv", "extracted_files", "DATA/runtime"]
